--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,5 +19,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, "Arizonia", Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+  font-family: "Arizonia", sans-serif
 }
