--- a/src/app/components/about.css
+++ b/src/app/components/about.css
@@ -4,18 +4,19 @@
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .timeline-sections {
     display: flex;
     gap: 50px;
     width: max-content;
+    height: 100%;
 }
 
 .timeline-item {
     min-width: 80vw;
-    height: 80vh;
+    height: 100vh;
     background: #111;
     color: white;
     display: flex;
