--- a/src/app/components/about.css
+++ b/src/app/components/about.css
@@ -15,13 +15,17 @@
 }
 
 .timeline-item {
+    margin: 20px;
     min-width: 80vw;
     height: 100vh;
     background: #111;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
     display: flex;
-    align-items: center;
+    padding: 50px;
+    align-items: start;
     justify-content: center;
     font-size: 2rem;
-    border-radius: 20px;
+    border-radius: 10px;
 }
