Se corrigieron estilos en el time line

--- a/src/app/components/about.css
+++ b/src/app/components/about.css
@@ -12,20 +12,20 @@
     gap: 50px;
     width: max-content;
     height: 100%;
+    padding: 20px;
 }
 
+/*
+
 .timeline-item {
-    margin: 20px;
     min-width: 80vw;
-    height: 100vh;
+    height: 80vh;
     background: #111;
-    background-repeat: no-repeat;
-    background-size: cover;
     color: white;
     display: flex;
-    padding: 50px;
-    align-items: start;
+    align-items: center;
     justify-content: center;
     font-size: 2rem;
-    border-radius: 10px;
+    border-radius: 20px;
 }
+    */
