--- a/src/app/components/about.css
+++ b/src/app/components/about.css
@@ -15,17 +15,22 @@
     padding: 20px;
 }
 
-/*
 
-.timeline-item {
-    min-width: 80vw;
-    height: 80vh;
-    background: #111;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-    border-radius: 20px;
+/* Scrollbar personalizado */
+.custom-scroll::-webkit-scrollbar {
+    width: 0px; 
+    height: 3px;
 }
-    */
+
+.custom-scroll::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0);
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+    background-color: #88888800;
+    border-radius: 10px; 
+}
+
+.album-stories{
+    filter: blur(4px);
+}
